[package]
name = "copier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rust-s3 = "0.32"
clap = { version = "4", features = ["derive"] }
